--- a/specification/ai/data-plane/OpenAI.v1/azure-v1-preview-generated.yaml
+++ b/specification/ai/data-plane/OpenAI.v1/azure-v1-preview-generated.yaml
@@ -2144,6 +2144,7 @@ paths:
         - name: include_obfuscation
           in: query
           required: false
+          description: When true, stream obfuscation will be enabled. Stream obfuscation adds random characters to an `obfuscation` field on streaming delta events to normalize payload sizes as a mitigation to certain side-channel attacks. These obfuscation fields are included by default, but add a small amount of overhead to the data stream. You can set `include_obfuscation` to false to optimize for bandwidth if you trust the network links between your application and the OpenAI API.
           schema:
             type: boolean
             default: true
@@ -12591,7 +12592,8 @@ components:
           type: string
           description: The partial code snippet being streamed by the code interpreter.
         obfuscation:
-          type: boolean
+          type: string
+          description: A field of random characters introduced by stream obfuscation. Stream obfuscation is a mechanism that mitigates certain side-channel attacks.
       allOf:
         - $ref: '#/components/schemas/OpenAI.ResponseStreamEvent'
       description: Emitted when a partial code snippet is streamed by the code interpreter.
@@ -13054,7 +13056,8 @@ components:
           type: string
           description: The function-call arguments delta that is added.
         obfuscation:
-          type: boolean
+          type: string
+          description: A field of random characters introduced by stream obfuscation. Stream obfuscation is a mechanism that mitigates certain side-channel attacks.
       allOf:
         - $ref: '#/components/schemas/OpenAI.ResponseStreamEvent'
       description: Emitted when there is a partial function-call arguments delta.
@@ -13269,7 +13272,8 @@ components:
         delta:
           description: The partial update to the arguments for the MCP tool call.
         obfuscation:
-          type: boolean
+          type: string
+          description: A field of random characters introduced by stream obfuscation. Stream obfuscation is a mechanism that mitigates certain side-channel attacks.
       allOf:
         - $ref: '#/components/schemas/OpenAI.ResponseStreamEvent'
       description: Emitted when there is a delta (partial update) to the arguments of an MCP tool call.
@@ -13488,7 +13492,8 @@ components:
         delta:
           description: The partial update to the reasoning content.
         obfuscation:
-          type: boolean
+          type: string
+          description: A field of random characters introduced by stream obfuscation. Stream obfuscation is a mechanism that mitigates certain side-channel attacks.
       allOf:
         - $ref: '#/components/schemas/OpenAI.ResponseStreamEvent'
       description: Emitted when there is a delta (partial update) to the reasoning content.
@@ -13552,7 +13557,8 @@ components:
         delta:
           description: The partial update to the reasoning summary content.
         obfuscation:
-          type: boolean
+          type: string
+          description: A field of random characters introduced by stream obfuscation. Stream obfuscation is a mechanism that mitigates certain side-channel attacks.
       allOf:
         - $ref: '#/components/schemas/OpenAI.ResponseStreamEvent'
       description: Emitted when there is a delta (partial update) to the reasoning summary content.
@@ -13681,7 +13687,8 @@ components:
           type: string
           description: The text delta that was added to the summary.
         obfuscation:
-          type: boolean
+          type: string
+          description: A field of random characters introduced by stream obfuscation. Stream obfuscation is a mechanism that mitigates certain side-channel attacks.
       allOf:
         - $ref: '#/components/schemas/OpenAI.ResponseStreamEvent'
       description: Emitted when a delta is added to a reasoning summary text.
@@ -13746,7 +13753,8 @@ components:
           type: string
           description: The refusal text that is added.
         obfuscation:
-          type: boolean
+          type: string
+          description: A field of random characters introduced by stream obfuscation. Stream obfuscation is a mechanism that mitigates certain side-channel attacks.
       allOf:
         - $ref: '#/components/schemas/OpenAI.ResponseStreamEvent'
       description: Emitted when there is a partial refusal text.
@@ -13932,7 +13940,8 @@ components:
           type: string
           description: The text delta that was added.
         obfuscation:
-          type: boolean
+          type: string
+          description: A field of random characters introduced by stream obfuscation. Stream obfuscation is a mechanism that mitigates certain side-channel attacks.
       allOf:
         - $ref: '#/components/schemas/OpenAI.ResponseStreamEvent'
       description: Emitted when there is an additional text delta.
