--- a/specification/ai/data-plane/OpenAI.v1/azure-v1-v1-generated.yaml
+++ b/specification/ai/data-plane/OpenAI.v1/azure-v1-v1-generated.yaml
@@ -2093,6 +2093,7 @@ paths:
         - name: include_obfuscation
           in: query
           required: false
+          description: When true, stream obfuscation will be enabled. Stream obfuscation adds random characters to an `obfuscation` field on streaming delta events to normalize payload sizes as a mitigation to certain side-channel attacks. These obfuscation fields are included by default, but add a small amount of overhead to the data stream. You can set `include_obfuscation` to false to optimize for bandwidth if you trust the network links between your application and the OpenAI API.
           schema:
             type: boolean
             default: true
@@ -11719,7 +11720,8 @@ components:
           type: string
           description: The partial code snippet being streamed by the code interpreter.
         obfuscation:
-          type: boolean
+          type: string
+          description: A field of random characters introduced by stream obfuscation. Stream obfuscation is a mechanism that mitigates certain side-channel attacks.
       allOf:
         - $ref: '#/components/schemas/OpenAI.ResponseStreamEvent'
       description: Emitted when a partial code snippet is streamed by the code interpreter.
@@ -12182,7 +12184,8 @@ components:
           type: string
           description: The function-call arguments delta that is added.
         obfuscation:
-          type: boolean
+          type: string
+          description: A field of random characters introduced by stream obfuscation. Stream obfuscation is a mechanism that mitigates certain side-channel attacks.
       allOf:
         - $ref: '#/components/schemas/OpenAI.ResponseStreamEvent'
       description: Emitted when there is a partial function-call arguments delta.
@@ -12397,7 +12400,8 @@ components:
         delta:
           description: The partial update to the arguments for the MCP tool call.
         obfuscation:
-          type: boolean
+          type: string
+          description: A field of random characters introduced by stream obfuscation. Stream obfuscation is a mechanism that mitigates certain side-channel attacks.
       allOf:
         - $ref: '#/components/schemas/OpenAI.ResponseStreamEvent'
       description: Emitted when there is a delta (partial update) to the arguments of an MCP tool call.
@@ -12616,7 +12620,8 @@ components:
         delta:
           description: The partial update to the reasoning content.
         obfuscation:
-          type: boolean
+          type: string
+          description: A field of random characters introduced by stream obfuscation. Stream obfuscation is a mechanism that mitigates certain side-channel attacks.
       allOf:
         - $ref: '#/components/schemas/OpenAI.ResponseStreamEvent'
       description: Emitted when there is a delta (partial update) to the reasoning content.
@@ -12680,7 +12685,8 @@ components:
         delta:
           description: The partial update to the reasoning summary content.
         obfuscation:
-          type: boolean
+          type: string
+          description: A field of random characters introduced by stream obfuscation. Stream obfuscation is a mechanism that mitigates certain side-channel attacks.
       allOf:
         - $ref: '#/components/schemas/OpenAI.ResponseStreamEvent'
       description: Emitted when there is a delta (partial update) to the reasoning summary content.
@@ -12809,7 +12815,8 @@ components:
           type: string
           description: The text delta that was added to the summary.
         obfuscation:
-          type: boolean
+          type: string
+          description: A field of random characters introduced by stream obfuscation. Stream obfuscation is a mechanism that mitigates certain side-channel attacks.
       allOf:
         - $ref: '#/components/schemas/OpenAI.ResponseStreamEvent'
       description: Emitted when a delta is added to a reasoning summary text.
@@ -12874,7 +12881,8 @@ components:
           type: string
           description: The refusal text that is added.
         obfuscation:
-          type: boolean
+          type: string
+          description: A field of random characters introduced by stream obfuscation. Stream obfuscation is a mechanism that mitigates certain side-channel attacks.
       allOf:
         - $ref: '#/components/schemas/OpenAI.ResponseStreamEvent'
       description: Emitted when there is a partial refusal text.
@@ -13060,7 +13068,8 @@ components:
           type: string
           description: The text delta that was added.
         obfuscation:
-          type: boolean
+          type: string
+          description: A field of random characters introduced by stream obfuscation. Stream obfuscation is a mechanism that mitigates certain side-channel attacks.
       allOf:
         - $ref: '#/components/schemas/OpenAI.ResponseStreamEvent'
       description: Emitted when there is an additional text delta.
