--- a/specification/edge/Microsoft.Edge.ConfigurationManager.Management/tspconfig.yaml
+++ b/specification/edge/Microsoft.Edge.ConfigurationManager.Management/tspconfig.yaml
@@ -36,6 +36,7 @@ options:
   "@azure-tools/typespec-ts":
     experimental-extensible-enums: true
     package-dir: "arm-workloadorchestration"
+    api-version: "2025-06-01"
     flavor: azure
     package-details:
       name: "@azure/arm-workloadorchestration"
