- more renaming - remove Operations.list - enable bicep serialization for csharp

--- a/specification/redis/Cache.Management/tspconfig.yaml
+++ b/specification/redis/Cache.Management/tspconfig.yaml
@@ -17,6 +17,7 @@ options:
     clear-output-folder: true
     model-namespace: true
     namespace: "{package-dir}"
+    enable-bicep-serialization: true
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-redis"
     namespace: "azure.mgmt.redis"
