Refactor machinelearning folder structure to comply with Azure Guidelines

--- a/specification/suppressions.yaml
+++ b/specification/suppressions.yaml
@@ -746,7 +746,7 @@
     - options.@azure-tools/typespec-ts.package-dir
     - options.@azure-tools/typespec-ts.emitter-output-dir
   paths:
-    - machinelearning/Azure.AI.ChatProtocol/tspconfig.yaml
+    - machinelearning/data-plane/ChatProtocol/tspconfig.yaml
 
 - tool: TypeSpecValidation
   reason: Suppress until spec can be updated
