--- a/specification/machinelearning/data-plane/ChatProtocol/tspconfig.yaml
+++ b/specification/machinelearning/data-plane/ChatProtocol/tspconfig.yaml
@@ -9,8 +9,8 @@ linter:
     - "@azure-tools/typespec-azure-rulesets/data-plane"
 options:
   "@azure-tools/typespec-autorest":
-    emitter-output-dir: "{project-root}/../"
-    output-file: "{azure-resource-provider-folder}/Azure.AI.ChatProtocol/{version-status}/{version}/generated.json"
+    emitter-output-dir: "{project-root}"
+    output-file: "{version-status}/{version}/generated.json"
     azure-resource-provider-folder: "data-plane"
     emit-lro-options: "none"
     omit-unreachable-types: true
