--- a/specification/edge/resource-manager/Microsoft.Edge/configurationmanager/stable/2025-06-01/configurationmanager.json
+++ b/specification/edge/resource-manager/Microsoft.Edge/configurationmanager/stable/2025-06-01/configurationmanager.json
@@ -4795,6 +4795,20 @@
               "$ref": "#/definitions/SolutionTemplate"
             }
           },
+          "202": {
+            "description": "Resource update request accepted.",
+            "headers": {
+              "Location": {
+                "type": "string",
+                "description": "The Location header contains the URL where the status of the long running operation can be checked."
+              },
+              "Retry-After": {
+                "type": "integer",
+                "format": "int32",
+                "description": "The Retry-After header can indicate how long the client should wait before polling the operation status."
+              }
+            }
+          },
           "default": {
             "description": "An unexpected error response.",
             "schema": {
@@ -4806,7 +4820,11 @@
           "SolutionTemplates_Update_MaximumSet": {
             "$ref": "./examples/SolutionTemplates_Update_MaximumSet_Gen.json"
           }
-        }
+        },
+        "x-ms-long-running-operation-options": {
+          "final-state-via": "location"
+        },
+        "x-ms-long-running-operation": true
       },
       "delete": {
         "operationId": "SolutionTemplates_Delete",
@@ -7507,25 +7525,6 @@
         ]
       }
     },
-    "Azure.ResourceManager.CommonTypes.TrackedResourceUpdate": {
-      "type": "object",
-      "title": "Tracked Resource",
-      "description": "The resource model definition for an Azure Resource Manager tracked top level resource which has 'tags' and a 'location'",
-      "properties": {
-        "tags": {
-          "type": "object",
-          "description": "Resource tags.",
-          "additionalProperties": {
-            "type": "string"
-          }
-        }
-      },
-      "allOf": [
-        {
-          "$ref": "../../../../../../common-types/resource-management/v5/types.json#/definitions/Resource"
-        }
-      ]
-    },
     "BulkDeploySolutionParameter": {
       "type": "object",
       "description": "Bulk deploy solution parameter",
@@ -9761,9 +9760,26 @@
         "capabilities"
       ]
     },
-    "SolutionTemplatePropertiesUpdate": {
+    "SolutionTemplateUpdate": {
       "type": "object",
-      "description": "Solution Template Properties",
+      "description": "The type used for update operations of the SolutionTemplate.",
+      "properties": {
+        "tags": {
+          "type": "object",
+          "description": "Resource tags.",
+          "additionalProperties": {
+            "type": "string"
+          }
+        },
+        "properties": {
+          "$ref": "#/definitions/SolutionTemplateUpdateProperties",
+          "description": "The resource-specific properties for this resource."
+        }
+      }
+    },
+    "SolutionTemplateUpdateProperties": {
+      "type": "object",
+      "description": "The updatable properties of the SolutionTemplate.",
       "properties": {
         "description": {
           "type": "string",
@@ -9785,21 +9801,6 @@
           "description": "Flag to enable external validation"
         }
       }
-    },
-    "SolutionTemplateUpdate": {
-      "type": "object",
-      "description": "Solution Template Resource. Contains capabilities and operations for creating versions.",
-      "properties": {
-        "properties": {
-          "$ref": "#/definitions/SolutionTemplatePropertiesUpdate",
-          "description": "The resource-specific properties for this resource."
-        }
-      },
-      "allOf": [
-        {
-          "$ref": "#/definitions/Azure.ResourceManager.CommonTypes.TrackedResourceUpdate"
-        }
-      ]
     },
     "SolutionTemplateVersion": {
       "type": "object",
