--- a/specification/storagemover/StorageMover.Management/tspconfig.yaml
+++ b/specification/storagemover/StorageMover.Management/tspconfig.yaml
@@ -14,7 +14,7 @@ options:
     emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
     flavor: azure
     clear-output-folder: true
-    model-namespace: false
+    model-namespace: true
     namespace: "Azure.ResourceManager.StorageMover"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-storagemover"
