add go module suffix

--- a/specification/chaos/Chaos.Management/tspconfig.yaml
+++ b/specification/chaos/Chaos.Management/tspconfig.yaml
@@ -34,7 +34,7 @@ options:
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/chaos"
     package-dir: "armchaos"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}/v2"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
