--- a/specification/edge/Microsoft.Edge.ConfigurationManager.Management/tspconfig.yaml
+++ b/specification/edge/Microsoft.Edge.ConfigurationManager.Management/tspconfig.yaml
@@ -20,6 +20,7 @@ options:
     generate-fakes: true
     head-as-boolean: true
     inject-spans: true
+    api-version: "2025-06-01"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-workloadorchestration"
     namespace: "azure.mgmt.workloadorchestration"
