--- a/specification/dashboard/Dashboard.Management/tspconfig.yaml
+++ b/specification/dashboard/Dashboard.Management/tspconfig.yaml
@@ -38,7 +38,7 @@ options:
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/dashboard"
     package-dir: "armdashboard"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}/v2"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
