--- a/specification/fist/IotFirmwareDefense.Management/tspconfig.yaml
+++ b/specification/fist/IotFirmwareDefense.Management/tspconfig.yaml
@@ -30,7 +30,7 @@ options:
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/iotfirmwaredefense"
     package-dir: "armiotfirmwaredefense"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}/v2"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
