--- a/specification/standbypool/StandbyPool.Management/tspconfig.yaml
+++ b/specification/standbypool/StandbyPool.Management/tspconfig.yaml
@@ -43,7 +43,7 @@ options:
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/standbypool"
     package-dir: "armstandbypool"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}/v2"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
