--- a/specification/vmware/Microsoft.AVS.Management/tspconfig.yaml
+++ b/specification/vmware/Microsoft.AVS.Management/tspconfig.yaml
@@ -28,7 +28,7 @@ options:
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/avs"
     package-dir: "armavs"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}/v2"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
