--- a/specification/advisor/Advisor.Management/tspconfig.yaml
+++ b/specification/advisor/Advisor.Management/tspconfig.yaml
@@ -39,6 +39,12 @@ options:
     generate-fakes: true
     head-as-boolean: true
     inject-spans: true
+  "@azure-tools/typespec-csharp":
+    emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
+    flavor: azure
+    clear-output-folder: true
+    model-namespace: true
+    namespace: "Azure.ResourceManager.Advisor"
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
