--- a/specification/support/Support.Management/tspconfig.yaml
+++ b/specification/support/Support.Management/tspconfig.yaml
@@ -43,6 +43,7 @@ options:
     package-dir: "azure-resourcemanager-support"
     namespace: com.azure.resourcemanager.support
     flavor: azure
+    service-name: Support
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/support"
     module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
