--- a/specification/support/Support.Management/tspconfig.yaml
+++ b/specification/support/Support.Management/tspconfig.yaml
@@ -16,6 +16,7 @@ options:
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/support.json"
     examples-dir: "{project-root}/examples"
     arm-resource-flattening: true
+    emit-lro-options: "all"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-support"
     namespace: "azure.mgmt.support"
