--- a/specification/dataprotection/DataProtection.Management/tspconfig.yaml
+++ b/specification/dataprotection/DataProtection.Management/tspconfig.yaml
@@ -10,7 +10,7 @@ options:
     azure-resource-provider-folder: "resource-manager"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/dataprotection.json"
     examples-dir: "{project-root}/examples"
-    emit-lro-options: "none"
+    emit-lro-options: "all"
   "@azure-tools/typespec-csharp":
     flavor: azure
     package-dir: "Azure.ResourceManager.DataProtection"
