--- a/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/examples/2025-06-01-preview/ApplicationActionUpdateUpgrade_example.json
+++ b/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/examples/2025-06-01-preview/ApplicationActionUpdateUpgrade_example.json
@@ -4,33 +4,33 @@
     "resourceGroupName": "resRg",
     "clusterName": "myCluster",
     "applicationName": "myApp",
-    "api-version": "2025-test-preview",
+    "api-version": "2025-06-01-preview",
     "parameters": {
-      "UpgradeKind": "Rolling",
-      "Name": "fabric:/Voting",
-      "UpdateDescription": {
-        "RollingUpgradeMode": "Monitored",
-        "ForceRestart": true,
-        "FailureAction": "Manual",
-        "HealthCheckWaitDurationInMilliseconds": "PT0H0M10S",
-        "HealthCheckStableDurationInMIlliseconds": "PT1H0M0S",
-        "HealthCheckRetryTimeoutInMilliseconds": "PT0H15M0S",
-        "UpgradeTimeoutInMilliseconds": "PT2H0M0S",
-        "UpgradeDomainTimeoutInMilliseconds": "PT2H0M0S"
+      "upgradeKind": "Rolling",
+      "name": "fabric:/Voting",
+      "updateDescription": {
+        "rollingUpgradeMode": "Monitored",
+        "forceRestart": true,
+        "failureAction": "Manual",
+        "healthCheckWaitDurationInMilliseconds": "PT0H0M10S",
+        "healthCheckStableDurationInMilliseconds": "PT1H0M0S",
+        "healthCheckRetryTimeoutInMilliseconds": "PT0H15M0S",
+        "upgradeTimeoutInMilliseconds": "PT2H0M0S",
+        "upgradeDomainTimeoutInMilliseconds": "PT2H0M0S"
       },
-      "ApplicationHealthPolicy": {
-        "ConsiderWarningAsError": true,
-        "MaxPercentUnhealthyDeployedApplications": 10,
-        "DefaultServiceTypeHealthPolicy": {
-          "MaxPercentUnhealthyPartitionsPerService": 10,
-          "MaxPercentUnhealthyReplicasPerPartition": 11,
-          "MaxPercentUnhealthyServices": 12
+      "applicationHealthPolicy": {
+        "considerWarningAsError": true,
+        "maxPercentUnhealthyDeployedApplications": 10,
+        "defaultServiceTypeHealthPolicy": {
+          "maxPercentUnhealthyPartitionsPerService": 10,
+          "maxPercentUnhealthyReplicasPerPartition": 11,
+          "maxPercentUnhealthyServices": 12
         },
-        "ServiceTypeHealthPolicyMap": {
+        "serviceTypeHealthPolicyMap": {
           "VotingWeb": {
-            "MaxPercentUnhealthyPartitionsPerService": 13,
-            "MaxPercentUnhealthyReplicasPerPartition": 14,
-            "MaxPercentUnhealthyServices": 15
+            "maxPercentUnhealthyPartitionsPerService": 13,
+            "maxPercentUnhealthyReplicasPerPartition": 14,
+            "maxPercentUnhealthyServices": 15
           }
 
         }
