--- a/specification/deviceregistry/resource-manager/Microsoft.DeviceRegistry/stable/2025-10-01/examples/Delete_NamespaceAsset.json
+++ b/specification/deviceregistry/resource-manager/Microsoft.DeviceRegistry/stable/2025-10-01/examples/Delete_NamespaceAsset.json
@@ -12,7 +12,8 @@
   "responses": {
     "202": {
       "headers": {
-        "Location": "NS location"
+        "Location": "https://contoso.com/operationstatus",
+        "azure-AsyncOperation": "http://azure.async.operation/status"
       }
     },
     "204": {
