--- a/specification/keyvault/Security.KeyVault.Settings/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Settings/tspconfig.yaml
@@ -27,11 +27,11 @@ options:
   "@azure-tools/typespec-go":
     service-dir: "sdk/security/keyvault"
     package-dir: "azadmin/settings"
+    containing-module: "github.com/Azure/azure-sdk-for-go/sdk/security/keyvault/azadmin"
+    api-version: "7.6"
     inject-spans: true
     single-client: true
     generate-fakes: true
-    module: "github.com/Azure/azure-sdk-for-go/sdk/security/keyvault/azadmin"
-    module-version: "0.0.1"
   "@azure-tools/typespec-client-generator-cli":
     additionalDirectories:
       - "specification/keyvault/Security.KeyVault.Common/"
