--- a/specification/programmableconnectivity/Azure.ProgrammableConnectivity/tspconfig.yaml
+++ b/specification/programmableconnectivity/Azure.ProgrammableConnectivity/tspconfig.yaml
@@ -30,8 +30,7 @@ options:
     generate-sample: true
   "@azure-tools/typespec-ts":
     generate-metadata: true
-    generate-sample: true
-    is-modular-library: true
+    is-modular-library: false
     package-dir: "programmableconnectivity-rest"
     package-details:
       name: "@azure-rest/programmableconnectivity"
