--- a/specification/contosowidgetmanager/Contoso.Management/tspconfig.yaml
+++ b/specification/contosowidgetmanager/Contoso.Management/tspconfig.yaml
@@ -33,9 +33,9 @@ options:
     package-details:
       name: "@azure/arm-contoso"
   "@azure-tools/typespec-go":
-    service-dir: "sdk/resourcemanager/contoso"
-    package-dir: "armcontoso"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    service-dir: "{output-dir}/sdk/resourcemanager/contoso"
+    emitter-output-dir: "{service-dir}/armcontoso"
+    module: "github.com/Azure/azure-sdk-for-go/sdk/resourcemanager/contoso/armcontoso"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
