--- a/specification/contosowidgetmanager/Contoso.WidgetManager/tspconfig.yaml
+++ b/specification/contosowidgetmanager/Contoso.WidgetManager/tspconfig.yaml
@@ -40,10 +40,9 @@ options:
     namespace: com.azure.contoso.widgetmanager
     flavor: azure
   "@azure-tools/typespec-go":
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
-    service-dir: "sdk/contosowidget"
-    package-dir: "azmanager"
-    module-version: "0.0.1"
+    module: "github.com/Azure/azure-sdk-for-go/sdk/contosowidget/azmanager"
+    service-dir: "{output-dir}/sdk/contosowidget"
+    emitter-output-dir: "{service-dir}/azmanager"
     generate-fakes: true
     inject-spans: true
     single-client: true
