--- a/specification/storagemover/StorageMover.Management/tspconfig.yaml
+++ b/specification/storagemover/StorageMover.Management/tspconfig.yaml
@@ -25,7 +25,7 @@ options:
   "@azure-tools/typespec-java":
     package-dir: "azure-resourcemanager-storagemover"
     namespace: "com.azure.resourcemanager.storagemover"
-    service-name: "StorageMover" # human-readable service name, whitespace allowed
+    service-name: "Storage Mover"
     flavor: azure
   "@azure-tools/typespec-ts":
     service-dir: sdk/storagemover
