Java SDK migration fixes for StorageMover: use-object-for-unknown and localIPAddress property name fix

--- a/specification/storagemover/StorageMover.Management/tspconfig.yaml
+++ b/specification/storagemover/StorageMover.Management/tspconfig.yaml
@@ -27,6 +27,7 @@ options:
     namespace: "com.azure.resourcemanager.storagemover"
     service-name: "Storage Mover"
     flavor: azure
+    use-object-for-unknown: true
   "@azure-tools/typespec-ts":
     service-dir: sdk/storagemover
     package-dir: "arm-storagemover"
