--- a/specification/onlineexperimentation/Azure.Analytics.OnlineExperimentation/tspconfig.yaml
+++ b/specification/onlineexperimentation/Azure.Analytics.OnlineExperimentation/tspconfig.yaml
@@ -48,8 +48,7 @@ options:
     model-namespace: false
   "@azure-tools/typespec-ts":
     package-dir: "onlineexperimentation-rest"
-    generate-sample: true
-    is-modular-library: true
+    is-modular-library: false
     package-details:
       name: "@azure-rest/onlineexperimentation"
       description: "Azure Online Experimentation Service"
