--- a/specification/machinelearningservices/AzureAI.Assets/tspconfig.yaml
+++ b/specification/machinelearningservices/AzureAI.Assets/tspconfig.yaml
@@ -18,7 +18,8 @@ options:
     generate-sample: true
   "@azure-tools/typespec-ts":
     generate-metadata: true
-    is-modular-library: false
+    generate-sample: true
+    is-modular-library: true
     package-dir: "ai-resources-autogen-rest"
     package-details:
       name: "@azure-rest/ai-resources-autogen"
