--- a/specification/communication/Communication.Messages/tspconfig.yaml
+++ b/specification/communication/Communication.Messages/tspconfig.yaml
@@ -56,7 +56,8 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "communication-messages-rest"
-    is-modular-library: false
+    generate-sample: true
+    is-modular-library: true
     package-details:
       name: "@azure-rest/communication-messages"
       description: "Azure client library for Azure Communication Messages services"
