--- a/specification/ai/ImageAnalysis/tspconfig.yaml
+++ b/specification/ai/ImageAnalysis/tspconfig.yaml
@@ -39,7 +39,8 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "ai-vision-image-analysis-rest"
-    is-modular-library: false
+    generate-sample: true
+    is-modular-library: true
     package-details:
       name: "@azure-rest/ai-vision-image-analysis"
     flavor: azure
