--- a/specification/batch/Azure.Batch/tspconfig.yaml
+++ b/specification/batch/Azure.Batch/tspconfig.yaml
@@ -50,7 +50,8 @@ options:
     generate-sample: false
   "@azure-tools/typespec-ts":
     package-dir: "batch-rest"
-    is-modular-library: false
+    generate-sample: true
+    is-modular-library: true
     package-details:
       name: "@azure-rest/batch"
       description: "Batch Service Rest Level Client"
