--- a/specification/communication/Communication.JobRouter/tspconfig.yaml
+++ b/specification/communication/Communication.JobRouter/tspconfig.yaml
@@ -57,7 +57,8 @@ options:
   "@azure-tools/typespec-ts":
     emitter-output-dir: "{js-sdk-folder}/sdk/{service-directory-name}/communication-job-router-rest"
     package-dir: "communication-job-router-rest"
-    is-modular-library: false
+    generate-sample: true
+    is-modular-library: true
     package-details:
       name: "@azure-rest/communication-job-router"
       description: "Azure client library for Azure Communication Job Router services"
