--- a/specification/loadtestservice/data-plane/loadtesting/tspconfig.yaml
+++ b/specification/loadtestservice/data-plane/loadtesting/tspconfig.yaml
@@ -41,7 +41,8 @@ options:
     title: Azure Load Testing
     description: Azure Load Testing Client
     generate-metadata: true
-    is-modular-library: false
+    generate-sample: true
+    is-modular-library: true
     generate-test: false
     package-details:
       name: "@azure-rest/load-testing"
