Added enum for defined values

--- a/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/LogicAppsExtension.json
+++ b/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/LogicAppsExtension.json
@@ -401,7 +401,12 @@
         },
         "kind": {
           "type": "string",
-          "description": "The workflow kind for ex. Stateful/Stateless."
+          "description": "Gets the logic app hybrid workflow kind.",
+          "enum": [
+            "Stateful",
+            "Stateless",
+            "Agentic"
+          ]
         },
         "properties": {
           "description": "Additional workflow properties.",
