Added enum for defined values

--- a/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/LogicAppsExtension.json
+++ b/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/LogicAppsExtension.json
@@ -406,7 +406,11 @@
             "Stateful",
             "Stateless",
             "Agentic"
-          ]
+          ],
+          "x-ms-enum": {
+            "name": "WorkflowKind",
+            "modelAsString": true
+          }
         },
         "properties": {
           "description": "Additional workflow properties.",
